fix safety.io package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SleepTrackerFragment"
         tools:targetApi="31">
+        <!--<activity
+            android:name="safety.io.sleeptracker.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.SleepTrackerFragment" />-->
         <activity
-            android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.SleepTrackerFragment">
+            android:theme="@style/Theme.SleepTrackerFragment"
+            android:name="safety.io.sleeptracker.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
